<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_phase">

    <fragment
        android:id="@+id/nav_phase"
        android:name="com.example.projectmanagement.ui.home.HomeFragment"
        android:label="@string/menu_project"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_myTasks"
        android:name="com.example.projectmanagement.ui.myTask.MyTaskFragment"
        android:label="@string/menu_myTask"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.projectmanagement.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.projectmanagement.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>