<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    tools:context=".ui.auth.LoginActivity">

    <!-- Tiêu đề ứng dụng -->
    <TextView
        android:id="@+id/app_name_intro_tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Mô tả header -->
    <TextView
        android:id="@+id/sign_up_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/login_header"
        android:textColor="@color/secondary_text_color"
        android:textSize="16sp" />

    <!-- Khung chứa các trường nhập liệu -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Label cho email -->
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:text="@string/label_email"
                android:textColor="#80000000" />

            <!-- Trường nhập email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_login_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/prompt_email"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_email_placeholder"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Label cho mật khẩu -->
            <TextView
                android:id="@+id/tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_password"
                android:textColor="#80000000" />

            <!-- Trường nhập mật khẩu -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/password_login_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/prompt_password"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nút Đăng nhập -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_button_rounded"
                android:enabled="false"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/or" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/login_by_google"
                    android:textColor="@android:color/black"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="8dp"
                    app:icon="@drawable/ic_google_placeholder"
                    app:iconGravity="textStart"
                    app:iconPadding="8dp"
                    app:iconTint="@null" />
            </LinearLayout>

            <!-- Phần Đăng ký -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_do_not_have_acc" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/register"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
