<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.auth.RegisterActivity">

    <!-- Tiêu đề ứng dụng -->
    <TextView
        android:id="@+id/app_name_intro_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!-- Mô tả header -->
    <TextView
        android:id="@+id/sign_up_description_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/register_header"
        android:textColor="@color/secondary_text_color"
        android:textSize="16sp" />

    <!-- Khung chứa các trường nhập liệu -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Label cho Email -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:text="@string/label_email"
                android:textColor="#80000000" />

            <!-- Trường nhập Email -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/email_register_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_email_placeholder"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#80000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Label cho Họ và Tên -->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_fullname"
                android:textColor="#80000000" />

            <!-- Trường nhập Họ và Tên -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullname_register_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_fullname"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_user"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#80000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Label cho Mật khẩu -->
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_password"
                android:textColor="#80000000" />

            <!-- Trường nhập Mật khẩu -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_register_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#80000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Label cho Xác nhận Mật khẩu -->
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/label_confirmPassword"
                android:textColor="#80000000" />

            <!-- Trường nhập Xác nhận Mật khẩu -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmPassword_til"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:hint="@string/confirmPassword"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:selectAllOnFocus="true"
                    android:textColorHint="#80000000" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nút Đăng ký -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_up_page_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_button_rounded"
                android:enabled="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp" />


            <!-- Phần chuyển màn hình Đăng nhập -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_acc" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/login"
                    android:textColor="@android:color/holo_blue_dark" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
